--- a/.github/workflows/build-CI.yml
+++ b/.github/workflows/build-CI.yml
@@ -2,7 +2,7 @@ name: N1-OpenWrt-CI
 
 on:
   schedule:
-    - cron: '0 22 14 * * ?'
+    - cron: '0 22 14 * * '
   repository_dispatch:
     types: 'run'
     
